--- a/wordpress/wp-content/themes/mauricio/style.css
+++ b/wordpress/wp-content/themes/mauricio/style.css
@@ -16,18 +16,24 @@ This simple theme was built using the example Bootstrap theme "Basic marketing s
 @import url('mauricio_bootstrap/css/bootstrap-responsive.css');
 
 body{
-	padding-top:60px;
-	padding-bottom: 40px;
+	/*padding-top:60px;*/
+	
 }
 
 
 /*My CSS Starts here*/
 
 footer{
-	clear: both;
-	bottom: 20px;
-	margin-bottom: 0;
+
+	padding-bottom: 50px;
+
 }
+
+.container{
+
+	overflow: hidden;
+}
+
 
 #mauricio {
 
@@ -65,3 +71,57 @@ footer{
 
 	font-size: 15px;
 }
+
+.intro{
+
+	/*padding-top: 50px;*/
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	/*background-color: gray;*/
+	/*position: absolute;*/
+	/*top: 40px;*/
+	/*float:left;*/
+	margin-top: 65px;
+	min-height: 400px;
+	max-height: 500px;
+}
+
+.header-mauricio{
+
+	border:none;
+	/*margin-bottom: 200px;*/
+	/*height: 30px;*/
+	/*padding-right: 15px;*/
+	top: 0;
+}
+
+.thumb-title {
+	width: 100%;
+}
+
+.intro-section {
+
+	margin-top: 40px;
+}
+
+.image-container{
+
+	overflow:hidden;
+}
+
+.footer-mauricio{
+
+	clear: both;
+	/*bottom: 20px;*/
+	margin-bottom: 0;
+	/*margin-top: 200px;*/
+	/*top: 60px;*/
+	margin-top: 100px;
+	top: 50px;
+	width: 100%;
+	height: 100px;
+
+}
+
+
