--- a/wordpress/wp-content/themes/mauricio/mauricio_bootstrap/css/bootstrap.css
+++ b/wordpress/wp-content/themes/mauricio/mauricio_bootstrap/css/bootstrap.css
@@ -303,7 +303,7 @@ html {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
@@ -816,7 +816,7 @@ pre code {
 
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: 950px;
   }
 }
 
