Added custom menu to show only categories for projects, blog excluded

--- a/wordpress/wp-content/themes/mauricio/style.css
+++ b/wordpress/wp-content/themes/mauricio/style.css
@@ -127,7 +127,7 @@ a:active {text-decoration: none;}
 }
 
 .project-sidebar-title{
-	display: inline-block;
+	display: none;
 }
 
 .project-sidebar-elements{
