--- a/wordpress/wp-content/themes/mauricio/style.css
+++ b/wordpress/wp-content/themes/mauricio/style.css
@@ -115,8 +115,6 @@ a:active {text-decoration: none;}
 }
 
 #sidebar{
-	display: block;
-	clear: right;
 	text-align: center;
 
 }
@@ -134,6 +132,7 @@ a:active {text-decoration: none;}
 .project-sidebar-elements{
 	 list-style-type: none;
 	 display: inline-block;
+	 margin: 0px 15px 10px;
 }
 
 .item {
