Added CSS width for isotope container

--- a/wordpress/wp-content/themes/mauricio/style.css
+++ b/wordpress/wp-content/themes/mauricio/style.css
@@ -141,6 +141,10 @@ a:active {text-decoration: none;}
 	margin: 10px;
 }
 
+#content {
+	width: 1200px;
+}
+
 /*---------------------This is for the footer -----------------------*/ 
 
 #footer-mauricio{
