--- a/wordpress/wp-content/themes/mauricio/style.css
+++ b/wordpress/wp-content/themes/mauricio/style.css
@@ -73,17 +73,13 @@ a:active {text-decoration: none;}
 }
 
 .intro{
-	/*padding-top: 50px;*/
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
-	/*background-color: gray;*/
-	/*position: absolute;*/
-	/*top: 40px;*/
-	/*float:left;*/
 	margin-top: 20px;
 	min-height: 400px;
 	max-height: 500px;
+	background-color: #f5f5f5 !important;
 }
 
 .header-mauricio{
