--- a/style.css
+++ b/style.css
@@ -47,14 +47,19 @@ a:active {text-decoration: none;}
 
 @media (min-width: 320px){
 	.logo-nav {
-		margin-top: 20px;
+		/*margin-top: 20px;*/
 	}
 }
 @media (min-width: 768px){
 	.logo-nav {
 
-		margin-top: 8px;
+		/*margin-top: 8px;*/
 	}
+}
+
+#burguer-menu {
+
+	margin: 4px 10px;
 }
 #logo {
   /*display: block;*/
@@ -63,26 +68,10 @@ a:active {text-decoration: none;}
   height: 25px;
   background: url(http://ec2-54-235-78-67.compute-1.amazonaws.com/wp-content/uploads/2015/12/logo12012015v1.0.svg);
   background-size: 240px 25px;
+  margin-top: 8px;
   margin-left: 15px;
   float: left;
 }
-
-/*#mauricio {
-	float: left;
-	font-size: 22px;
-	margin: 0;
-	color: #b9d657;
-	letter-spacing: 2pt;
-}
-
-#sanchez { 	
-	float: left;
-	font-size: 22px;
-	margin: 0;
-	margin-left: 3px;
-	font-weight: bold;
-	letter-spacing: 1pt;
-}*/
 
 #title { 
 	float: left;
@@ -159,7 +148,25 @@ a:active {text-decoration: none;}
 }
 
 #content {
-	width: 1200px;
+	width: 768px;
+}
+
+@media (min-width: 320px){
+	#content {
+		width: 420px;
+	}
+}
+@media (min-width: 768px){
+	#content {
+
+		width: 800px;
+	}
+}
+@media (min-width: 900px){
+	#content {
+
+		width: 1080px;
+	}
 }
 
 /* -------------------- Blog Posts -------------------- */
