Updated style template text

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: mauricioSanchez's Portfolio
 Theme URI: http://www.sanchezmauricio.com
-Description: A Design Portfolio from Interaction Designer Mauricio Sanchez
+Description: A Design Portfolio from Product Designer & Technologist Mauricio Sanchez
 Author: Mauricio Sanchez-Duque
-Author URI: http://www.sanchezmauricio.com
+Author URI: http://www.sanchezmauricio.com/about
 Version: 1.0
 Tags: responsive, white, bootstrap, design portfolio, interaction.
 License: 
