Added dynamic text tot he work header

--- a/style.css
+++ b/style.css
@@ -112,6 +112,13 @@ a:active {text-decoration: none;}
 	margin-top: 40px;
 }
 
+/* header work */
+
+#expertise-areas {
+
+	
+}
+
 /*.image-container{
 	margin-top: 25px;
 	overflow: hidden;
