--- a/style.css
+++ b/style.css
@@ -143,14 +143,23 @@ a:active {text-decoration: none;}
 	display: none;
 }
 
+/* this is for the filter buttons */
 .project-sidebar-elements{
-	 list-style-type: none;
-	 display: inline-block;
-	 margin: 0px 15px 10px;
-	 font-size: 16px;
-     background: none;
-     color: #428bca;
-     border: none;
+	list-style-type: none;
+	display: inline-block;
+	margin: 0px 15px 10px;
+	font-size: 16px;
+    background: none;
+    color: #428bca;
+    border: #428bca;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 6px;
+}
+/* when selected we change the look of the button */
+.is-checked {
+	background: #428bca;
+	color: white;
 }
 
 .item {
