--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ a:active {text-decoration: none;}
     border-style: solid;
     border-width: 2px;
     border-radius: 6px;
+    padding: 5px 18px;
 }
 /* when selected we change the look of the button */
 .is-checked {
