--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ a:active {text-decoration: none;}
 	margin-top: 20px;
 	min-height: 400px;
 	max-height: 500px;
-	background-color: #f5f5f5 !important;
+	/*background-color: #f5f5f5 !important;*/
 }
 
 .header-mauricio{
@@ -133,6 +133,7 @@ a:active {text-decoration: none;}
 
 #sidebar{
 	text-align: center;
+	background-color: #eeeeee;
 }
 
 #container{
@@ -143,25 +144,44 @@ a:active {text-decoration: none;}
 	display: none;
 }
 
+/* when selected we change the look of the button */
+.is-checked {
+	background: white !important; 
+	color: #101010;
+}
+
 /* this is for the filter buttons */
 .project-sidebar-elements{
 	list-style-type: none;
 	display: inline-block;
-	margin: 0px 15px 10px;
+	margin: 0px 15px;
 	font-size: 16px;
     background: none;
-    color: #428bca;
-    border: #428bca;
-    border-style: solid;
+    /*color: #428bca;*/
+    /*border: #428bca;*/
+    border-style: none;
     border-width: 2px;
-    border-radius: 6px;
+    /*border-radius: 6px;*/
     padding: 5px 18px;
+}	
+
+
+@media (max-width: 480px){
+	.project-sidebar-elements{
+		list-style-type: none;
+		display: inline-block;
+		margin: 0px 5px;
+		font-size: 12px;
+	    background: none;
+	    /*color: #428bca;*/
+	    /*border: #428bca;*/
+	    border-style: none;
+	    border-width: 2px;
+	    /*border-radius: 6px;*/
+	    padding: 2px 9px;
+	}	
 }
-/* when selected we change the look of the button */
-.is-checked {
-	background: #428bca;
-	color: white;
-}
+
 
 .item {
 	float: left;
