--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a:active {text-decoration: none;}
 
 .projects-thumbs{
 	/*margin-top: 45px;*/
-	margin-bottom: 100px;
+	/*margin-bottom: 100px;*/
 	overflow: hidden;
 }
 
@@ -134,6 +134,7 @@ a:active {text-decoration: none;}
 #sidebar{
 	text-align: center;
 	background-color: #eeeeee;
+	margin-bottom: 50px;
 }
 
 #container{
@@ -144,27 +145,17 @@ a:active {text-decoration: none;}
 	display: none;
 }
 
-/* when selected we change the look of the button */
-.is-checked {
-	background: white !important; 
-	color: #101010;
-}
-
 /* this is for the filter buttons */
 .project-sidebar-elements{
 	list-style-type: none;
 	display: inline-block;
-	margin: 0px 15px;
+	margin: 0px 10px;
 	font-size: 16px;
-    background: none;
-    /*color: #428bca;*/
-    /*border: #428bca;*/
+    background: none;    
     border-style: none;
-    border-width: 2px;
-    /*border-radius: 6px;*/
+    border-width: 2px;    
     padding: 5px 18px;
 }	
-
 
 @media (max-width: 480px){
 	.project-sidebar-elements{
@@ -182,6 +173,11 @@ a:active {text-decoration: none;}
 	}	
 }
 
+/* when selected we change the look of the button */
+.is-checked {
+	background: white !important; 
+	color: #101010;
+}
 
 .item {
 	float: left;
@@ -224,7 +220,7 @@ a:active {text-decoration: none;}
 #footer-mauricio{
 	clear: both;
 	margin-bottom: 0;
-	margin-top: 100px;
+	margin-top: 50px;
 	top: 50px;	
 	/*max-height: 300px;*/
 	color: #999999;	
