Added style to the contact form

--- a/style.css
+++ b/style.css
@@ -307,9 +307,68 @@ a:active {text-decoration: none;}
 	
 }
 
+/* --------------------Blog Posts ---------------------- */ 
+
+.single-container{
+	margin-top: 80px;
+}
+
+.divider{
+
+	/*border-style: solid;*/
+	/*border-bottom: black;*/
+	margin: 50px 0px 30px ;
+}
+
+.comment{
+	list-style-type: none;
+}
+.comment-meta{
+	font-size: 9px
+}
 
 
+/* -------------------- Contact Form Elements ---------------------- */ 
 
+.contact-container{
+	margin: 50px 0px;
+}
+
+.contact-text-field-input{
+    resize: none;
+    background-color: #eeeeee;
+    border-style: none;
+    border-radius: 5px;
+    width: 300px;
+}
+
+.contact-subject-input{
+	background-color: #eeeeee;
+    border-style: none;
+    border-radius: 5px;
+    width: 300px;
+}
+
+.contact-email-input{
+	background-color: #eeeeee;
+    border-style: none;
+    border-radius: 5px;
+    width: 300px;
+}
+
+.contact-name-input{
+	background-color: #eeeeee;
+    border-style: none;
+    border-radius: 5px;
+    width: 300px;
+}
+
+.contact-submit-button{
+	background-color: #eeeeee;
+    border-style: none;
+    border-radius: 5px;
+    /*width: 300px;*/
+}
 
 
 
