--- a/mauricio_bootstrap/css/bootstrap.css
+++ b/mauricio_bootstrap/css/bootstrap.css
@@ -1872,8 +1872,8 @@ legend {
 
 label {
   display: inline-block;
-  margin-bottom: 5px;
-  font-weight: bold;
+  /*margin-bottom: 5px;*/
+  /*font-weight: bold;*/
 }
 
 input[type="search"] {
