--- a/style.css
+++ b/style.css
@@ -39,11 +39,11 @@ a:active {text-decoration: none;}
 
 
 @media (min-width: 1440px){
-	.projects-thumbs{
+/*	.projects-thumbs{
 
 		width: 1120px;
 		padding: 0;
-	}
+	}*/
 	.item {
 		float: left;
 		margin: 15px;
@@ -56,11 +56,11 @@ a:active {text-decoration: none;}
 }
 
 @media (max-width: 1440px){
-	.projects-thumbs{
+/*	.projects-thumbs{
 
 		width: 1120px;
 		padding: 0;
-	}
+	}*/
 	.item {
 		float: left;
 		margin: 15px;
@@ -73,10 +73,10 @@ a:active {text-decoration: none;}
 }
 
 @media (max-width: 1280px){
-	.projects-thumbs{
+/*	.projects-thumbs{
 		width: 990px;
-		/*overflow: hidden;*/
-	}	
+		
+	}*/	
 	.item {
 		float: left;
 		margin: 15px;
@@ -90,10 +90,10 @@ a:active {text-decoration: none;}
 }
 
 @media (max-width: 1024px){
-	.projects-thumbs{
+/*	.projects-thumbs{
 		width: 760px;
-		/*overflow: hidden;*/
-	}	
+		
+	}*/	
 	.item {
 		float: left;
 		margin: 15px;
@@ -105,6 +105,7 @@ a:active {text-decoration: none;}
 		height: 224px;
 	}
 }
+
 
 /*Iphone 6*/
 @media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) { 
@@ -122,10 +123,27 @@ a:active {text-decoration: none;}
 		height: 320px;
 	}
 }
-
 #burguer-menu {
 	margin: 4px 10px;
 }
+
+/* Portrait and Landscape */
+@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) {
+	.projects-thumbs{
+		width: 530px;
+	}	
+	.item {
+		float: left;
+		margin: 15px;
+		width: 500px;
+
+	}
+	.img-thumb{
+		width: 500px;
+		height: 320px;
+	}
+}
+
 
 #logo {
   /*display: block;*/
@@ -157,6 +175,7 @@ a:active {text-decoration: none;}
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
+	margin-bottom: 0px;
 	min-height: 400px;
 	max-height: 500px;
 	/*background-color: #f5f5f5 !important;*/
