Committing before starting working on blog thumbs design

--- a/style.css
+++ b/style.css
@@ -281,8 +281,8 @@ a:active {text-decoration: none;}
 
 .blog-posts {
 	margin: 0px auto;
-	max-width: 800px;
-	padding: 10px 30px;
+/*	max-width: 800px;
+	padding: 10px 30px;*/
 
 }
 
