--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ a:active {text-decoration: none;}
 	  margin-left: 15px;
 	}
 	.intro{
-		min-height: 250px;
-		max-height: 300px;
+/*		min-height: 250px;
+		max-height: 300px;*/
 	}
 }
 
@@ -185,6 +185,10 @@ a:active {text-decoration: none;}
 
 /*---------------------This is for the body Landing page -----------------------*/ 
 
+.projects-thumbs{
+	padding-bottom: 240px;
+}
+
 .custom-row{
 	float: left;
 	/*we need this for mobile*/
@@ -249,11 +253,11 @@ a:active {text-decoration: none;}
 }
 
 
-/**** Isotope filtering ****/
-
-
-
 /* -------------------- Blog Posts -------------------- */
+
+.blog-container{
+	padding-bottom: 240px;
+}
 
 .blog-posts {
 	margin: 50px auto;
@@ -269,11 +273,8 @@ a:active {text-decoration: none;}
 /* --------------------This is for the footer ---------------------- */ 
 
 #footer-mauricio{
-/*	margin-bottom: 0;
-	margin-top: 50px;*/
 	position: absolute;
-	width:100%;
-	height: 200px;
+	width:100%;	
 	bottom:0;
 }
 
@@ -348,9 +349,12 @@ a:active {text-decoration: none;}
 
 /* --------------------General Posts ---------------------- */ 
 
+.single-container{
+	padding-bottom: 240px;
+}
+
 .single-content{
 	margin-top: 80px;
-	height:100%;
 }
 
 /* --------------------Blog Posts ---------------------- */ 
@@ -392,7 +396,7 @@ a:active {text-decoration: none;}
 }
 
 .comment-body{
-    margin: 25px 0px;
+    margin-top: 25px;
 }
 
 .reply{
