--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ a:active {text-decoration: none;}
 /*---------------------This is for the body Landing page -----------------------*/ 
 
 .projects-thumbs{
-	
+
 }
 
 .custom-row{
@@ -427,6 +427,11 @@ a:active {text-decoration: none;}
 }
 
 /* -------------------- Contact Form Elements ---------------------- */ 
+#jumbotron-email{
+	font-size: 16px;
+	font-weight: 500;
+}
+
 #mauricio-email{
     font-weight: bold;
     font-style: italic;
