--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ a:active {text-decoration: none;}
 /* ------------------ media query for our containers based on boostrap ------------------ */
 
 @media (min-width: 320px){
+	/* Project Thumnails */	
 	.item {
 		float: left;
 		margin: 15px auto;
@@ -56,17 +57,15 @@ a:active {text-decoration: none;}
 		width: 290px;
 		height: 173px;
 	}
+	/* Top Nav Bar */
 	#logo {
 	  margin-top: 16px;
 	  margin-left: 15px;
 	}
-	.intro{
-/*		min-height: 250px;
-		max-height: 300px;*/
-	}
 }
 
 @media (min-width: 640px){
+	/* Project Thumnails */	
 	.item {
 		float: left;
 		width: 500px;
@@ -81,6 +80,7 @@ a:active {text-decoration: none;}
 }
 
 @media (min-width: 768px){
+	/* Project Thumnails */	
 	.item {
 		float: left;
 		margin: 15px auto;
@@ -90,6 +90,7 @@ a:active {text-decoration: none;}
 		width: 500px;
 		height: 320px;
 	}
+	/* Top Nav Bar */
 	#logo {
 	  margin-top: 8px;
 	}
@@ -103,26 +104,37 @@ a:active {text-decoration: none;}
 	}
 }
 
-@media (min-width: 992px){	
+@media (min-width: 992px){
+	/* Project Thumnails */	
 	.item {
 		float: left;
 		margin: 15px;
 		width: 350px;
-		/*padding-left: 15px;*/
-
 	}
 	.img-thumb{
 		width: 350px;
 		height: 224px;
 	}
+	/* Top Nav Bar */
 	.intro{
 		min-height: 350px;
 		max-height: 400px;
+	}
+	/* Blog Post */
+	.blog-posts {
+		width: 350px;
+		height: 400px;
+	}
+
+	.blog-thumb{
+		width: 350px;
+		height: 224px;
 	}
 
 }
 
 @media (min-width: 1200px){
+	/* Project Thumnails */
 	.item {
 		position: relative;
 		float: left;
@@ -135,9 +147,20 @@ a:active {text-decoration: none;}
 		width: 250px;
 		height: 160px;
 	}
+	/* Top Nav Bar */
 	.nav {
 		font-size: 15px;
 		margin-left: 10px;
+	}
+	/* Blog Post */
+	.blog-posts {
+		width: 250px;
+		height: 380px;
+	}
+
+	.blog-thumb{
+		width: 250px;
+		height: 160px;
 	}
 }
 
@@ -259,19 +282,45 @@ a:active {text-decoration: none;}
 
 .blog-container{
 	padding-bottom: 240px;
-	padding-left: 30px;
 }
 
-.blog-posts {
-	margin: 50px auto;
+.blog-posts{
+	float: left;
+	margin: 30px 15px;
+	background-color: #f5f5f5;
 }
 
-.entry {
-	border-bottom-width: 2px;
-	border-bottom: solid;
-	border-bottom-color: #D3D3D3;
-	padding-bottom: 15px;
+.blog-title{
+	font-size: 22px;
+	padding: 0px 15px;
+	margin-bottom: 0px;
+	margin-top: 10px;
+	color: #222222;
+	text-transform: uppercase;
 }
+
+.blog-date{
+	font-size: 10px;
+	padding: 10px 15px 0px;
+	margin-bottom: 0px;
+	font-weight: 300;
+	color: #222222;
+	text-transform: uppercase;
+}
+
+.blog-entry{
+	font-size: 18px;
+	color: #222222;
+	font-weight: 600;
+	padding: 10px 15px;	
+	text-transform: uppercase;
+}
+
+.blog-posts:hover {
+	/*background-color: white;*/
+}
+
+
 
 /* --------------------This is for the footer ---------------------- */ 
 
@@ -427,10 +476,7 @@ a:active {text-decoration: none;}
 }
 
 /* -------------------- Contact Form Elements ---------------------- */ 
-#jumbotron-email{
-	font-size: 16px;
-	font-weight: 500;
-}
+
 
 #mauricio-email{
     font-weight: bold;
