Make blog thumbs completely responsive

--- a/style.css
+++ b/style.css
@@ -51,16 +51,26 @@ a:active {text-decoration: none;}
 		float: left;
 		margin: 15px auto;
 		width: 290px;
-
 	}
 	.img-thumb{
 		width: 290px;
 		height: 173px;
 	}
+
 	/* Top Nav Bar */
 	#logo {
 	  margin-top: 16px;
 	  margin-left: 15px;
+	}
+
+	/* Blog Post */
+	.blog-posts {
+		width: 290px;
+		height: 380px;
+	}
+	.blog-thumb{
+		width: 290px;
+		height: 173px;
 	}
 }
 
@@ -74,6 +84,16 @@ a:active {text-decoration: none;}
 
 	}
 	.img-thumb{
+		width: 500px;
+		height: 320px;
+	}
+	/* Blog Post */
+	.blog-posts {
+		width: 500px;
+		height: 450px;
+	}
+
+	.blog-thumb{
 		width: 500px;
 		height: 320px;
 	}
@@ -281,6 +301,7 @@ a:active {text-decoration: none;}
 /* -------------------- Blog Posts -------------------- */
 
 .blog-container{
+	padding-top: 40px;
 	padding-bottom: 240px;
 }
 
