--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ a:active {text-decoration: none;}
 	}
 	.nav > li > a{
 		padding: 0;
-		margin: 15px 8px;
+		margin: 15px 8px 0px;
 	}
 }
 
@@ -230,19 +230,13 @@ a:active {text-decoration: none;}
 
 /* Nav Bar Menu */
 a {
+text-decoration: none;
 transition-property: border color;
 -webkit-transition-duration: 0.3s;
 -moz-transition-duration: 0.3s;
 -o-transition-duration: 0.3s;
 transition-duration: 0.3s;
 color: #4999c1;
-text-decoration: none;
-}
-
-.page-item-a  {
-    
-    border-bottom: 2px solid rgba(255, 255, 255, 0);
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
 }
 
 .page-item-a:hover {
